erDiagram
  SOURCE_REGISTRY_ENTRY ||--o{ DOCUMENT : discovers
  DOCUMENT ||--o{ DOCUMENT_VERSION : versions
  DOCUMENT_VERSION ||--o{ PASSAGE : contains
  PASSAGE ||--o{ CLAIM_EVIDENCE_LINK : anchors
  CLAIM ||--o{ CLAIM_EVIDENCE_LINK : supported_by
  ACTION ||--o{ ACTION_CLAIM : described_by
  CLAIM ||--o{ ACTION_CLAIM : contributes_to
  ACTION ||--o{ ACTION_RELATIONSHIP : source
  ACTION ||--o{ ACTION_RELATIONSHIP : target
  CLAIM ||--o{ REVIEW : reviewed
  ACTION ||--o{ REVIEW : reviewed
  METHODOLOGY_BUNDLE ||--o{ INTERPRETATION_PROFILE : parameterized_by
  EVIDENCE_SNAPSHOT ||--o{ SNAPSHOT_DOCUMENT_VERSION : includes
  DOCUMENT_VERSION ||--o{ SNAPSHOT_DOCUMENT_VERSION : frozen_in
  METHODOLOGY_BUNDLE ||--o{ EVALUATION_RUN : drives
  INTERPRETATION_PROFILE ||--o{ EVALUATION_RUN : resolves
  EVIDENCE_SNAPSHOT ||--o{ EVALUATION_RUN : supplies
  EVALUATION_RUN ||--|| EVALUATION_RECEIPT : emits
  EVALUATION_RECEIPT ||--o{ DISCREPANCY : compared_by
  RELEASE ||--o{ EVALUATION_RECEIPT : publishes
